Incluindo SASS e começando o layout

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -10,11 +10,17 @@
 	<link rel="stylesheet" href="assets/bower/font-awesome/css/font-awesome.css">
 	<link rel="stylesheet" href="assets/bower/devicon/devicon.min.css">
 	
+	<!-- Mars Express CSS Style -->
+	<link rel="stylesheet" href="assets/css/style.css">
+	
 	<link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,900,300italic,400italic,600italic,700italic,900italic" rel="stylesheet" type="text/css">
 	<link href="http://fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet" type="text/css">
 	
 	<script type="text/javascript" src="assets/bower/angular/angular.min.js"></script>
 	<script type="text/javascript" src="assets/bower/angular-ui-router/release/angular-ui-router.min.js"></script>
+	<script type="text/javascript" src="assets/bower/angular-local-storage/dist/angular-local-storage.min.js"></script>
+	
+	<!-- Mars Express Angular -->
 	<script type="text/javascript" src="angular.app.js"></script>
 	<script type="text/javascript" src="angular.views.js"></script>
 	
