Trabalhando na interface

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -41,12 +41,25 @@
 		  </div>
 		</nav>
 		
-		<div class="view">
+		<section class="view">
 			<div ui-view autoscroll="false"></div>
-		</div>
+		</section>
+		
+		
+		<section class="footer">
+			<p class="copyright">Teste de Programação Elo7</p>	
+			<ul>
+				<li class="dev"><i class="devicon-java-plain-wordmark"></i></li>
+				<li class="dev"><i class="devicon-angularjs-plain"></i></li>
+				<li class="dev"><i class="devicon-gulp-plain"></i></li>
+				<li class="dev"><i class="devicon-sass-original"></i></li>
+				<li class="dev"><i class="devicon-bower-line-wordmark"></i></li>
+				<li class="dev"><i class="devicon-javascript-plain"></i></li>
+				<li class="dev"><i class="devicon-github-plain-wordmark"></i></li>
+			</ul>
+		</section>		
+		
 	</div>
-	
-	
 	
 </body>
 </html>
