--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -9,6 +9,7 @@
 	<link rel="stylesheet" href="assets/bower/animate.css/animate.min.css">
 	<link rel="stylesheet" href="assets/bower/font-awesome/css/font-awesome.css">
 	<link rel="stylesheet" href="assets/bower/devicon/devicon.min.css">
+	<link rel="stylesheet" href="assets/bower/angular-bootstrap/ui-bootstrap.min.js">
 	
 	<!-- Mars Express CSS Style -->
 	<link rel="stylesheet" href="assets/css/style.css">
@@ -60,6 +61,24 @@
 		</section>		
 		
 	</div>
+	
+	<div id="modal" class="modal fade" tabindex="-1" role="dialog">
+	  <div class="modal-dialog">
+	    <div class="modal-content">
+	      <div class="modal-header">
+	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	      </div>
+	      <div class="modal-body">
+	        <p>This is a message</p>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	
+	<script type="text/javascript" src="assets/bower/jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="assets/bower/bootstrap/dist/js/bootstrap.min.js"></script>
+	
+	
 	
 </body>
 </html>
