--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -69,7 +69,7 @@
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 	      </div>
 	      <div class="modal-body">
-	        <p>This is a message</p>
+	        <p>{{modal.message}}</p>
 	      </div>
 	    </div>
 	  </div>
