--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,8 +35,8 @@
 	            </div>
 	            <ul class="nav navbar-nav navbar-right">
 	              <li><a href="#!/home">Home</a></li>
-	              <li><a href="../navbar-static-top/">Rudolfo Borges</a></li>
-	              <li><a href="../navbar-fixed-top/">Sobre o Desafio</a></li>
+	              <li><a href="#!/rudolfoborges">Rudolfo Borges</a></li>
+	              <li><a href="#!/desafio">Sobre o Desafio</a></li>
 	            </ul>
 		  </div>
 		</nav>
@@ -66,6 +66,7 @@
 	    <div class="modal-content">
 	      <div class="modal-header">
 	        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+	        Mars Express
 	      </div>
 	      <div class="modal-body">
 	        <p>{{modal.message}}</p>
