--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -55,6 +55,7 @@
 				<li class="dev"><i class="devicon-sass-original"></i></li>
 				<li class="dev"><i class="devicon-bower-line-wordmark"></i></li>
 				<li class="dev"><i class="devicon-javascript-plain"></i></li>
+				<li class="dev"><i class="devicon-docker-plain-wordmark"></i></li>
 				<li class="dev"><i class="devicon-github-plain-wordmark"></i></li>
 			</ul>
 		</section>		
