--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-	<title>Teste de Programação Elo7</title>
+	<title>Teste de Programação</title>
 	
 	<link rel="stylesheet" href="assets/bower/normalize-css/normalize.css">
 	<link rel="stylesheet" href="assets/bower/bootstrap/dist/css/bootstrap.min.css">
@@ -47,7 +47,7 @@
 		
 		
 		<section class="footer">
-			<p class="copyright">Teste de Programação Elo7</p>	
+			<p class="copyright">Teste de Programação Java</p>	
 			<ul>
 				<li class="dev"><i class="devicon-java-plain-wordmark"></i></li>
 				<li class="dev"><i class="devicon-angularjs-plain"></i></li>
